# agentception

./: .dockerignore  COPILOT.md  Dockerfile  LICENSE  README.md  SESSION.md  check_system.py  pyproject.toml
.github/: copilot-instructions.md  mcp-config.json
agentception/: __init__.py  cli.py  entrypoint.py
docs/: QUICK_REFERENCE.md  Specification.md  TESTING.md  USER_MANUAL.md
src/: __init__.py  container.py  orchestrator.py  tools.py
tests/: test_container.py  test_integration.py  test_orchestrator.py  test_tools.py
