[tool.poetry]
name = "agentception"
version = "0.1.0"
description = "A self-hosted, offline CLI AI orchestrator for the Think-Act-Observe loop"
authors = ["Agentception Contributors"]
license = "MIT"
packages = [{include = "agentception"}]

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.1.0"
rich = "^13.0.0"
typer = "^0.9.0"
asyncio = "^3.4.3"
httpx = "^0.25.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
black = "^23.0.0"
ruff = "^0.0.280"

[tool.poetry.scripts]
agentception = "agentception.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]
